@@ -1,5 +1,7 @@
 2002-01-21  Per Bothner  <per@bothner.com>
 
+	* Document.java:  Moved to gnu.kawa.xml.
+
 	* Document.java (document):  New static methods.
 	(apply):  Use one of the new methods.
 
